amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.1:
  ADD: GstEngine: Support for custom output plugin parameters. (BR 83949)
  ADD: CoverManager - for downloading and managing album cover images.
  CHG: Refactored engine plugin interface. Each engine can now provide specific
       configuration GUIs.
  ADD: As-you-type search for FileBrowser.
  ADD: Seeking with mousewheel in playerwindow.
  REM: Stream-Browser.
  ADD: New meta-info dialog, with editable tags and MusicBrainz support.
  ADD: Inline-tag editing auto-completion based on the Collection Database.
  ADD: Deleting files physically from playlist context menu. (BR 75208)
  ADD: Fadeouts for GStreamer-Engine.
  ADD: New Playlist Browser, organizes multiple playlists, and offers smart
       playlist functionality.
  ADD: Support for redirected streams and streams with no specified port.
  ADD: KIO support for GStreamer engine. Allows playing media via all
       protocols supported by KIO (ftp, audiocd, fish, etc). 
  ADD: SearchBrowser operation can now be aborted.
  ADD: XineEngine plugin, audio only.
  ADD: Progressbar in CollectionBrowser informs about scan progress, and a
       button was added for aborting the scan. (BR 83019)
  ADD: Playlist sliders (volume and position) now move directly when clicked
       outside of the handle. (BR 83611) 
  ADD: Tagless tracks now go into Collection too, listed as "unknown".
  ADD: Automatic album cover fetching is back and improved.
  ADD: Option for automatically switching to Context when playback is started.
  CHG: Stream timeout value is now determined from KDE user settings.
  ADD: Support for password-protected streams, by wef <javapojken@yahoo.se>. 
  FIX: GStreamer engine must not allow non-audio filetypes in playlist.
  ADD: Icon for "Menu" button in toolbar. Improves Usability.

VERSION 1.0.2:
  FIX: aRts-engine: Compatibility with newer aRts versions improved.